--- a/app/views/layout/base.twig
+++ b/app/views/layout/base.twig
@@ -12,10 +12,10 @@
 
   <link rel="shortcut icon" href="http://designmania.eu/favicon.ico">
   <link rel="stylesheet" href="{{ resource_url }}css/style5e1f.css?v=2">
-  <link rel="stylesheet" href="{{ resource_url }}css/jcarousel.html">
+  <!-- <link rel="stylesheet" href="{{ resource_url }}css/jcarousel.html"> -->
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="js/libs/modernizr-1.7.min.js"></script>
+  <script src="{{ resource_url }}js/libs/modernizr-1.7.min.js"></script>
 
 </head>
 
@@ -42,16 +42,23 @@
 	<div class="popup" id="popup-register">
 		<h2>Registration form</h2>
 		<hr class="separator">
-		<form method="post" action="#" class="form clearfix">
+		{% if register_error != null %}
+			<div class="error">
+				{% for error in register_error %}
+					- {{ error }} <br>
+				{% endfor %}
+			</div>
+		{% endif %}
+		<form method="post" action="#" id="register_form" class="form clearfix">
 			<fieldset>
 				<label for="login-username">Username:</label>
-				<input type="text" name="" id="login-username" class="input text">
+				<input type="text" name="r_username" id="login-username" class="input text">
 				<label for="login-email">Email:</label>
-				<input type="text" name="" id="login-email" class="input text error" value="Error">
+				<input type="text" name="r_email" id="login-email" class="input text error" value="Error">
 				<label for="login-password">Password:</label>
-				<input type="password" name="" id="login-password" class="input text">
+				<input type="password" name="r_password" id="login-password" class="input text">
 				<label for="login-confirm-password">Confirm password:</label>
-				<input type="password" name="" id="login-confirm-password" class="input text">
+				<input type="password" name="r_passwordconfirm" id="login-confirm-password" class="input text">
 			</fieldset>
 		
 			<hr class="separator">
@@ -75,10 +82,11 @@
 	</div>
 </body>
 
-	
+
 <script type="text/javascript" src="{{ resource_url }}js/libs/jquery-1.7.1.min.js"></script>
 <script src="{{ resource_url }}js/libs/jquery.easing.1.3.js"></script>
 <script src="{{ resource_url }}js/script.js"></script>
+<script src="{{ resource_url }}js/recepten.js"></script>
 <script src="{{ resource_url }}js/libs/jquery.jcarousel.min.js"></script>
 <script type="text/javascript">
 	// FRONT SLIDER STARTER
@@ -90,6 +98,11 @@
 				animation: 'slow',
 				initCallback: mycarousel_initCallback,
 		});
+		Recepten.token = '{{ token }}';
+		Recepten.base_url = '{{ base_url }}';
+		{% if register_error != null %}
+			$(".register-btn").trigger('click');
+		{% endif %}
 	});
 </script>
 </html>
