--- a/app/views/layout/base.twig
+++ b/app/views/layout/base.twig
@@ -6,26 +6,50 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Cooker</title>
+  <title>Mijn Recepten Boek</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel="shortcut icon" href="http://designmania.eu/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="{{ resource_url }}css/style5e1f.css?v=2">
   <!-- <link rel="stylesheet" href="{{ resource_url }}css/jcarousel.html"> -->
 
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="{{ resource_url }}js/libs/modernizr-1.7.min.js"></script>
+	<!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
+	<script src="{{ resource_url }}js/libs/modernizr-1.7.min.js"></script>
+	<script src="http://thecodeplayer.com/uploads/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<!-- <script type="text/javascript" src="{{ resource_url }}js/libs/jquery-1.7.1.min.js"></script> -->
 
+	<script src="http://thecodeplayer.com/uploads/js/jquery.easing.min.js" type="text/javascript"></script>
+	<!-- <script src="{{ resource_url }}js/libs/jquery.easing.1.3.js"></script> -->
+	<script src="{{ resource_url }}js/script.js"></script>
+	<script src="{{ resource_url }}js/recepten.js"></script>
+	<script src="{{ resource_url }}js/libs/jquery.jcarousel.min.js"></script>
+	<script type="text/javascript">
+		// FRONT SLIDER STARTER
+		jQuery(document).ready(function() {
+			jQuery('#mycarousel').jcarousel({
+					auto: 3,
+					wrap: 'last',
+					scroll: 1,
+					animation: 'slow',
+					initCallback: mycarousel_initCallback,
+			});
+			Recepten.token = '{{ token }}';
+			Recepten.base_url = '{{ base_url }}';
+			{% if register_error != null %}
+				$(".register-btn").trigger('click');
+			{% endif %}
+		});
+	</script>
 </head>
 
-<body class="home">
+<body class=" {% if start == true %} home {% endif %}">
 
 	<!-- LOGIN POP UPS -->
 	<div id="popup-overlay"></div>
 	<div class="popup" id="popup-login">
 		<h2>Login form</h2>
-		<form method="post" action="" class="form clearfix">
+		<form method="post" action="" id="login_form" class="form clearfix">
 			<hr class="separator">
 			<fieldset>
 				<label for="login-username">Username:</label>
@@ -42,7 +66,7 @@
 	<div class="popup" id="popup-register">
 		<h2>Registration form</h2>
 		<hr class="separator">
-		<form method="post" action="#" id="register_form" class="form clearfix">
+		<form method="post" action="" id="register_form" class="form clearfix">
 			<fieldset>
 				<label for="login-username">Username:</label>
 				<input type="text" name="r_username" id="login-username" class="input text">
@@ -70,32 +94,101 @@
 		<a class="close" href="#"></a>
 	</div>
 	<div class='wrapper'>
+		<header>
+			<div class="top-nav">
+				<nav>
+					<ul>
+						{% if authUser.logged %}
+							<li><span>Welcome back {{ authUser.username }}</span></li>
+							<li><a href="#">Profiel</a></li>
+							<li><a href="#logout" class="logout-btn logout">Logout</a></li>
+						{% else %}
+							<li><a href="#" id="login-btn">login</a></li>
+							<li><a href="#" class="register-btn">register</a></li>
+							<li><a href="about.html">about</a></li>
+							<li><a href="contact.html">contact</a></li>
+							<li><a href="menu.html">menu</a></li>
+							<li>
+								<a href="menu.html">Sub menu</a>
+								<ul>
+									<li>
+										<a href="menu.html">level 2</a>
+										<ul>
+											<li><a href="menu.html">level 3</a></li>
+											<li><a href="menu.html">level 3</a></li>
+											<li><a href="menu.html">level 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="menu.html">level 2</a>
+										<ul>
+											<li><a href="menu.html">level 3</a></li>
+											<li><a href="menu.html">level 3</a></li>
+											<li><a href="menu.html">level 3</a></li>
+										</ul>
+									</li>
+									<li><a href="menu.html">level 2</a></li>
+									<li><a href="menu.html">level 2</a></li>
+									<li><a href="menu.html">level 2</a></li>
+								</ul>
+							</li>
+						{% endif %}
+						
+						
+				  	</ul>
+				</nav>
+				<form class="search-form" method="post">
+				 	<input type="text" class="search">
+				 	<input type="submit" class="search-submit" value="">
+				</form>
+			</div>
+			<a href="index-2.html" class="logo"><img src="images/logo.png" alt="your logo" /></a>
+			<nav class="main-menu">
+				<ul>
+					<li id="lava-elm"></li>
+					<li class="current">
+						<a href="listing.html">Fruits and vegetables</a>
+						<ul>
+							<li><a href="menu.html">level 2</a></li>
+							<li><a href="menu.html">level 2</a></li>
+							<li><a href="menu.html">level 2</a></li>
+							<li><a href="menu.html">level 2</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="listing.html">Seafood</a>
+						<ul>
+							<li><a href="menu.html">level 2</a></li>
+							<li><a href="menu.html">level 2</a></li>
+							<li><a href="menu.html">level 2</a></li>
+							<li><a href="menu.html">level 2</a></li>
+						</ul>
+					</li>
+					<li><a href="listing.html">Meat</a></li>
+					<li><a href="listing.html">Entrees</a></li>
+					<li><a href="listing.html">Pizza and pasta</a></li>
+					<li><a href="listing.html">Desserts</a></li>
+				</ul>
+			</nav>
+
+			{% if start == true  %}
+			  	<div class="header-slider-canvas">
+					<div class="parts part-1"></div>
+					<div class="parts part-2"></div>
+					<div class="parts part-3"></div>
+				</div>
+				<ul id="mycarousel" class="jcarousel-skin-header-slider">
+					<li><img src="images/slider-1.jpg" width="680px" height="464" alt="" /><div class="description"><span class='price'>$24.00</span><span class='name'>Lamb chops and asparagus</span><a href="#" class="shop">shop now</a></div></li>
+					<li><img src="images/slider-2.jpg" width="680px"  height="464" alt="" /><div class="description"><span class='price'>$39.00</span><span class='name'>Lamb chops and asparagus</span><a href="#" class="shop">shop now</a></div></li>
+					<li><img src="images/slider-3.jpg" width="680px"  height="464" alt="" /></li>
+				</ul>
+			{% endif %}
+		</header>
 	    {% block content %}
 	    {% endblock %}
 	</div>
 </body>
 
 
-<script type="text/javascript" src="{{ resource_url }}js/libs/jquery-1.7.1.min.js"></script>
-<script src="{{ resource_url }}js/libs/jquery.easing.1.3.js"></script>
-<script src="{{ resource_url }}js/script.js"></script>
-<script src="{{ resource_url }}js/recepten.js"></script>
-<script src="{{ resource_url }}js/libs/jquery.jcarousel.min.js"></script>
-<script type="text/javascript">
-	// FRONT SLIDER STARTER
-	jQuery(document).ready(function() {
-		jQuery('#mycarousel').jcarousel({
-				auto: 3,
-				wrap: 'last',
-				scroll: 1,
-				animation: 'slow',
-				initCallback: mycarousel_initCallback,
-		});
-		Recepten.token = '{{ token }}';
-		Recepten.base_url = '{{ base_url }}';
-		{% if register_error != null %}
-			$(".register-btn").trigger('click');
-		{% endif %}
-	});
-</script>
+
 </html>
